# Copyright (c) 2019 NVIDIA Corporation.  All rights reserved.

import("//build/dotfile_settings.gni")

# The location of the build configuration file.
buildconfig = "//build/config/BUILDCONFIG.gn"

# The secondary source root is a parallel directory tree where
# GN build files are placed when they can not be placed directly
# in the source tree, e.g. for third party source trees.
secondary_source = "//build/secondary/"

check_targets = [ ]

exec_script_whitelist = build_dotfile_settings.exec_script_whitelist +
                        [ "//build_overrides/build.gni" ]

default_args = {
  is_component_build = false
  use_cxx11 = true
  libyuv_use_gflags = false
  gtest_enable_absl_printers = true
}
